# maziac

./: CMakeLists.txt  README.md  progress.md
asset/: map1.tmx  map2.tmx
asset/animations/: bull_anim.xml  character_anim.xml  diver_anim.xml  fight_anim.xml  fight_diver_win.aseprite
asset/map/: handmade_map.tmx  handmade_map_v2.tmx
asset/tiled/: map.tiled-session  map_tileset.tsx  maziac.tiled-session  tileset.tsx
docs/: Progress.md  progress.md
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  main.cpp
src/ecs/: AnimationClip.h  Component.h  ComponentType.h  Entity.h  World.h
src/ecs/event/: BaseEvent.h  EventManager.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  EnemyInteractionSystem.cpp  EnemyInteractionSystem.h  EnemyWanderSystem.h  EnergyDepletionSystem.cpp  EnergyDepletionSystem.h  EventResponseSystem.cpp  EventResponseSystem.h  KeyboardInputSystem.h  MainMenuSystem.cpp  MainMenuSystem.h  MouseInputSystem.cpp  MouseInputSystem.h  MovementSystem.cpp  MovementSystem.h  ObserverSystem.h  PathIlluminationSystem.h  RenderSystem.h  SpawnTimerSystem.h  TileInteractionSystem.cpp  TileInteractionSystem.h  UIRenderSystem.h
src/manager/: AssetManager.cpp  AssetManager.h  SceneManager.h  TextureManager.cpp  TextureManager.h
src/scene/: Scene.cpp  Scene.h  SceneType.h
src/utils/: Collision.cpp  Collision.h  MapUtils.h  RenderUtils.h  Vector2D.cpp  Vector2D.h
